Fixed part of FindBugs' whining.